src/objects/OnBoardFormModel__c.object
<CustomObject>
    <fields>
        <fullName>Add_l_Services_Requested__c</fullName>
        <description>Add&apos;l Services Requested</description>
        <label>Add&apos;l Flex Features Requested</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_Add_l_Services_Needed_Not_Listed__c</fullName>
        <description>Are Add&apos;l Services Needed Not Listed?</description>
        <label>Are Add&apos;l Flex Features Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain_Transfer_Fee__c</fullName>
        <description>Domain Transfer Fee</description>
        <label>Domain Transfer Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Contract_Value__c</fullName>
        <description>Sum of monthly budgets for all selected products</description>
        <formula>IF(PPC__c, PPC_Budget__c, 0) 
+ 
IF(SEO__c, SEO_Budget__c, 0) 
+
IF(Lead_Capture_Pages__c, Lead_Capture_Page_Budget__c, 0) 
+ 
IF(Social_Advertising__c, Social_Ads_Budget_Month__c, 0) 
+ 
IF(Social_Media_Management__c, Social_Budget__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value_Websites__c</fullName>
        <description>Total contract value for Websites</description>
        <formula>IF(Websites__c, 
IF(ISPICKVAL(Contract_Length_Months_Websites__c, &apos;Evergreen&apos;), 
12, 
VALUE(TEXT(Contract_Length_Months_Websites__c))), 
0)
+
Website_Quote_Cost_Custom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Value Websites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>